Updated Donation and body color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>sch1z0.net projects</title>
     <style>
         body {
-            background-color: rgb(140,140,140);
+            background-color: rgb(200,200,200);
             margin: 0;
             padding: 0; 
             width: 100%;
@@ -164,7 +164,7 @@
             </div>
          </div>
     </div>
-    <div class="header_row_item" style="width: 200px">
+    <div class="header_row_item" style="width: 300px">
         <div style="border-bottom: solid 1px black;">
          <h1>Links:</h1>
 
@@ -191,8 +191,9 @@
         <div>
            <h1>Donate:</h1>
            <div style="text-align: justify;">
-           You can help me through my life with a small donation on Paypal, if you like my work.
-           <div id="donate-button-container" style=" margin-left: 50%; margin-top: 10px">
+           You can help me through my life with a small donation on Paypal or buymeacoffee.com, if you like my work.
+         <div style="display:flex; flex-direction: row; margin-left: 10px; margin-top: 10px">
+           <div id="donate-button-container" style="transform:scale(1.2);  margin-top: 14px;">
             <div id="donate-button"></div>
                <script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
                <script>
@@ -207,7 +208,13 @@
                  }).render('#donate-button');
                </script>
             </div>
+
+        <div id="coffee-button-container" style="transform:scale(0.7); margin-left: 20px;">
+           <a href="https://www.buymeacoffee.com/sch1z0"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=sch1z0&button_colour=ffffff&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00" /></a>
         </div>
+       </div>
+
+         </div>
         </div>
     </div>
 
