--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -12,7 +12,14 @@
 </head>
 <body>
 	<div id="root">
-          <grid-window></grid-window>
+        <grid-window>
+           <beat-bar>
+           	  <beat-col data-beat="1"/>
+              <beat-col data-beat="2"/>
+           	  <beat-col data-beat="3"/>
+              <beat-col data-beat="4"/>
+           </beat-bar>  	
+        </grid-window>
 	</div>
 </body>
 </html>
