--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -14,10 +14,10 @@
 	<div id="root">
         <grid-window>
            <beat-bar>
-           	  <beat-col data-beat="1"/>
-              <beat-col data-beat="2"/>
-           	  <beat-col data-beat="3"/>
-              <beat-col data-beat="4"/>
+           	  <beat-col data-beat="1"></beat-col>
+              <beat-col data-beat="2"></beat-col>
+           	  <beat-col data-beat="3"></beat-col>
+              <beat-col data-beat="4"></beat-col>
            </beat-bar>  	
         </grid-window>
 	</div>
