--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -9,6 +9,11 @@
 	<script src="/sketchtune/js/app.js">
 	</script>
 	<link href="/sketchtune/css/theme.css" rel="stylesheet">
+	<script
+	    src="https://code.jquery.com/jquery-3.7.1.js"
+	    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+		crossorigin="anonymous">
+	</script>
 </head>
 <body>
 	<div id="root">
