--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -12,7 +12,7 @@
 	    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous">
 	</script>
-	
+
 	<script src="/sketchtune/js/app.js">
 	</script>
 	<link href="/sketchtune/css/theme.css" rel="stylesheet">
@@ -25,6 +25,14 @@
               <beat-col data-beat="2"></beat-col>
            	  <beat-col data-beat="3"></beat-col>
               <beat-col data-beat="4"></beat-col>
+           	  <beat-col data-beat="5"></beat-col>
+              <beat-col data-beat="6"></beat-col>
+           	  <beat-col data-beat="7"></beat-col>
+              <beat-col data-beat="8"></beat-col>
+           	  <beat-col data-beat="9"></beat-col>
+              <beat-col data-beat="10"></beat-col>
+           	  <beat-col data-beat="11"></beat-col>
+              <beat-col data-beat="12"></beat-col>
            </beat-bar>  	
         </grid-window>
 	</div>
