--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -33,7 +33,12 @@
               <beat-col data-beat="10"></beat-col>
            	  <beat-col data-beat="11"></beat-col>
               <beat-col data-beat="12"></beat-col>
-           </beat-bar>  	
+           </beat-bar>  
+           <track-window>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           </track-window>	
         </grid-window>
 	</div>
 </body>
