--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -33,7 +33,9 @@
               <beat-col data-beat="10"></beat-col>
            	  <beat-col data-beat="11"></beat-col>
               <beat-col data-beat="12"></beat-col>
-           </beat-bar>  
+           </beat-bar> 
+           <beat-bar-header>
+           </beat-bar-header> 
            <track-window>
            	  <track-row></track-row>
            	  <track-row></track-row>
