--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -20,10 +20,12 @@
 <body>
 	<div id="root">
         <grid-window>
-           <beat-bar>
-           </beat-bar> 
-           <beat-bar-header>
-           </beat-bar-header> 
+           <beat-bar-container>
+              <beat-bar>
+              </beat-bar> 
+              <beat-bar-header>
+              </beat-bar-header> 
+           </beat-bar-container>
            <track-window>
            	  <track-row></track-row>
            	  <track-row></track-row>
