track-row-empty

--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -21,15 +21,16 @@
 	<div id="root">
         <grid-window>
            <beat-bar-container>
-              <beat-bar>
-              </beat-bar> 
               <beat-bar-header>
               </beat-bar-header> 
+              <beat-bar>
+              </beat-bar> 
            </beat-bar-container>
            <track-window>
            	  <track-row></track-row>
            	  <track-row></track-row>
            	  <track-row></track-row>
+           	  <track-row-empty></track-row-empty>
            </track-window>	
         </grid-window>
 	</div>
