--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -30,7 +30,9 @@
            	  <track-row></track-row>
            	  <track-row></track-row>
            	  <track-row></track-row>
-           	  <track-row-empty></track-row-empty>
+           	  <track-row-empty>
+           	  	<span>Create New Track</span>
+           	  </track-row-empty>
            </track-window>	
         </grid-window>
 	</div>
