--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -30,6 +30,18 @@
            	  <track-row></track-row>
            	  <track-row></track-row>
            	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
            	  <track-row-empty>
            	  	<span>Create New Track</span>
            	  </track-row-empty>
