--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -42,6 +42,20 @@
            	  <track-row></track-row>
            	  <track-row></track-row>
            	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
            	  <track-row-empty>
            	  	<span>Create New Track</span>
            	  </track-row-empty>
