--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -61,6 +61,9 @@
            	  </track-row-empty>
            </track-window>	
         </grid-window>
+        <side-window>
+        	
+        </side-window>
 	</div>
 </body>
 </html>
