--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -62,7 +62,11 @@
            </track-window>	
         </grid-window>
         <side-window>
-        	
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
         </side-window>
 	</div>
 </body>
