--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -62,13 +62,13 @@
            </track-window>	
         </grid-window>
         <side-window>
-          <tracktitle-container>
+          <track-title-container>
         	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
-          </tracktitle-container>
+          </track-title-container>
         </side-window>
 	</div>
 </body>
