--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -47,15 +47,6 @@
            	  <track-row></track-row>
            	  <track-row></track-row>
            	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
-           	  <track-row></track-row>
            	  <track-row-empty>
            	  	<span>Create New Track</span>
            	  </track-row-empty>
@@ -63,6 +54,21 @@
         </grid-window>
         <side-window>
           <track-title-container>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
