--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -47,6 +47,26 @@
            	  <track-row></track-row>
            	  <track-row></track-row>
            	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
+           	  <track-row></track-row>
            	  <track-row-empty>
            	  	<span>Create New Track</span>
            	  </track-row-empty>
@@ -54,6 +74,26 @@
         </grid-window>
         <side-window>
           <track-title-container>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
+        	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
         	<track-title></track-title>
