patterns stick to scrollable row

--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -27,9 +27,11 @@
               </beat-bar> 
            </beat-bar-container>
            <track-window>
+           	<track-row-container>
            	  <!--<track-row-empty>
            	  	<span>Create New Track</span>
            	  </track-row-empty>-->
+           	</track-row-container>
            </track-window>	
         </grid-window>
         <side-window>
