--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -27,11 +27,11 @@
               </beat-bar> 
            </beat-bar-container>
            <track-window>
-           	<track-row-container>
+           	<track-line-container>
            	  <!--<track-row-empty>
            	  	<span>Create New Track</span>
            	  </track-row-empty>-->
-           	</track-row-container>
+           	</track-line-container>
            </track-window>	
         </grid-window>
         <side-window>
