--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -12,11 +12,9 @@
 	    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous">
 	</script>
-
-	<script src="/sketchtune/js/app.js">
-	</script>
 	<link href="/sketchtune/css/theme.css" rel="stylesheet">
 </head>
 <body>
+	<script src="/sketchtune/js/app.js"></script>
 </body>
 </html>
