--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -15,6 +15,8 @@
 	<link href="/sketchtune/css/theme.css" rel="stylesheet">
 </head>
 <body>
-	<script src="/sketchtune/js/app.js"></script>
+	<div id="root">
+	   <script src="/sketchtune/js/app.js"></script>
+	</div>
 </body>
 </html>
