--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -21,6 +21,8 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dsp.js/2.0.5/dsp.min.js"></script>
+
 </head>
 <body>
 	<div id="root">
