--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -21,7 +21,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dsp.js/2.0.5/dsp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.0/math.min.js"></script>
 
 </head>
 <body>
