--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -24,6 +24,7 @@
 <body>
 	<div id="root">
 	   <script src="/sketchtune/js/app.js"></script>
+	   <canvas id="waveformCanvas" width="800" height="200"></canvas>
 	</div>
 </body>
 </html>
