--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -24,7 +24,8 @@
 <body>
 	<div id="root">
 	   <script src="/sketchtune/js/app.js"></script>
-	   <canvas id="waveformCanvas" width="800" height="200"></canvas>
+	   <canvas id="waveformCanvas" width="800" height="200" style="position: absolute; z-index: 500;"></canvas>
+	   <canvas id="spectrumCanvas" width="800" height="200" style="position: absolute; z-index: 500; margin-top: 200px"></canvas>
 	</div>
 </body>
 </html>
