--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div id="root">
-	   <script type="module" src="/sketchtune/js/app.js"></script>
+	   <script src="/sketchtune/js/app.js"></script>
 	</div>
 </body>
 </html>
