--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 	<div id="root">
+	   <script src="/sketchtune/js/fft.js"></script>
 	   <script src="/sketchtune/js/stretcher.js"></script>
 	   <script src="/sketchtune/js/app.js"></script>
 	</div>
