make a fft lookup generator

--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv='cache-control' content='no-cache'> 
 <meta http-equiv='expires' content='0'> 
 <meta http-equiv='pragma' content='no-cache'>
-	
+
 	<meta charset="utf-8"/>
 	<link rel="icon" href="/sketchtune/favicon.ico"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -30,6 +30,7 @@
 	   <script src="/sketchtune/js/fft.js"></script>
 	   <script src="/sketchtune/js/stretcher.js"></script>
 	   <script src="/sketchtune/js/app.js"></script>
+	   <script src="/sketchtune/js/fft_generator.js"></script>
 	</div>
 </body>
 </html>
