try out web assembly

--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -27,10 +27,10 @@
 </head>
 <body>
 	<div id="root">
+	   <script src="/sketchtune/js/fft_wasm.js"></script>
 	   <script src="/sketchtune/js/fft.js"></script>
 	   <script src="/sketchtune/js/stretcher.js"></script>
 	   <script src="/sketchtune/js/app.js"></script>
-	   <script src="/sketchtune/js/fft_generator.js"></script>
 	</div>
 </body>
 </html>
