test if indutny works

--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -29,7 +29,8 @@
 <body>
 	<div id="root">
 	   <script src="/oink_fft/js/fft_wasm.js"></script>
-	   <script src="/oink_fft/js/fft.js"></script>
+	   <script src="/oink_fft/js/oink_fft.js"></script>
+	   <script src="/oink_fft/js/indutny_fft.js"></script>
 	   <script src="/oink_fft/js/main.js"></script>
 	</div>
 </body>
