--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -32,6 +32,7 @@
 	   <script src="/oink_fft/js/oink_fft.js"></script>
 	   <script src="/oink_fft/js/indutny/fft.js"></script>
 	   <script src="/oink_fft/js/ooura/ooura.js"></script>
+	   <script src="/oink_fft/js/dsp/dsp.js"></script>
 	   <script type="module" src="/oink_fft/js/main.js"></script>
 	</div>
 </body>
