--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -33,6 +33,8 @@
 	   <script src="/oink_fft/js/indutny/fft.js"></script>
 	   <script src="/oink_fft/js/ooura/ooura.js"></script>
 	   <script src="/oink_fft/js/dsp/dsp.js"></script>
+	   <script src="/oink_fft/js/kiss/kissfft.wasm"></script>
+	   <script src="/oink_fft/js/kiss/kissfft.js"></script>
 	   <script type="module" src="/oink_fft/js/main.js"></script>
 	</div>
 </body>
