--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
 	<div id="root">
-	   <script src="/oink_fft/js/fft_wasm.js"></script>
-	   <script src="/oink_fft/js/oink_fft.js"></script>
+	   <script src="/oink_fft/js/oink/fft_wasm.js"></script>
+	   <script src="/oink_fft/js/oink/oink_fft.js"></script>
 	   <script src="/oink_fft/js/indutny/fft.js"></script>
 	   <script src="/oink_fft/js/ooura/ooura.js"></script>
 	   <script src="/oink_fft/js/dsp/dsp.js"></script>
