--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -29,8 +29,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     -->
-    <link href="./fonts/SueEllenFrancisco-Regular.ttf" rel="stylesheet">
-    <link href="./fonts/Varela-Regular.ttf" rel="stylesheet">
+    <link href="./fonts/SueEllenFrancisco-Regular.ttf" rel="stylesheet" type="font/ttf">
+    <link href="./fonts/Varela-Regular.ttf" rel="stylesheet" type="font/ttf">
     
 
 </head>
