--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv='pragma' content='no-cache'>
 
 	<meta charset="utf-8"/>
-	<link rel="icon" href="/oink_fft/favicon.ico"/>
+	<!--<link rel="icon" href="/oink_fft/favicon.ico"/>-->
 	<meta name="viewport" content="width=device-width,initial-scale=1"/>
 	<meta name="OINK FFT" content="The oinkiest FFT in the web"/>
 	<title>OINK FFT</title>
