--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -44,6 +44,6 @@
     <script src="/oink_fft/js/indutny/fft.js"></script>
     <script src="/oink_fft/js/dsp/dsp.js"></script>
     <script src="/oink_fft/js/ooura/ooura.js"></script>
-    <!--<script src="/oink_fft/js/benchmark.js"></script>-->
+    <script src="/oink_fft/js/benchmark.js"></script>
 </body>
 </html>
