--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -38,8 +38,8 @@
 	<div id="root">
 	</div>
     <script src="/oink_fft/js/main.js"></script>
-    <!--<script src="/oink_fft/js/oink/fft_wasm.js" defer></script>
-    <script src="/oink_fft/js/oink/oink_fft.js" defer></script>-->
+    <script src="/oink_fft/js/oink/fft_wasm.js" defer></script>
+    <script src="/oink_fft/js/oink/oink_fft.js" defer></script>
     <script src="/oink_fft/js/kiss/kiss_fft.js" defer></script>
     <script src="/oink_fft/js/indutny/fft.js"></script>
     <script src="/oink_fft/js/dsp/dsp.js"></script>
