--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -20,7 +20,7 @@
 	</script>
 	<link href="/oink_fft/css/theme.css" rel="stylesheet">
 
-	<script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"></script>
 </head>
 <body>
 	<div id="root">
