--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -23,8 +23,23 @@
 	<script src=" https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
 </head>
 <body>
-	<div id="root">
-	</div>
+	<section id="section_main">
+	    <div id="root">
+	    </div>
+	</section>
+	<section id="section_usage">
+        <h2>Usage</h2>
+        
+	</section>
+
+
+
+
+
+
+
+
+
     <script src="/oink_fft/js/main.js"></script>
     <script src="/oink_fft/js/oink/fft_wasm.js" defer></script>
     <script src="/oink_fft/js/oink/oink_fft.js" defer></script>
