--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -26,8 +26,11 @@
 	<section id="section_main">
 	    <div id="root">
 	    </div>
-	    <a href="#section_usage" class="anchor">Usage</a>
-	    <a href="#section_donate" class="anchor">Donate</a>
+	    <div id="anchors">
+          	<a href="#section_usage" class="anchor">Usage</a>
+	        <a href="#section_donate" class="anchor">Donate</a>
+	    </div>
+
 	</section>
 	<section id="section_usage">
         <h2>Usage</h2>
