--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -52,14 +52,14 @@
 
 
 
-    <script src="/oink_fft/js/main.js"></script>
+    <script src="/oink_fft/js/main.js" defer></script>
     <script src="/oink_fft/js/oink/fft_wasm.js" defer></script>
     <script src="/oink_fft/js/oink/oink_fft.js" defer></script>
     <script src="/oink_fft/js/kiss/kiss_fft.js" defer></script>
-    <script src="/oink_fft/js/indutny/fft.js"></script>
-    <script src="/oink_fft/js/dsp/dsp.js"></script>
-    <script src="/oink_fft/js/ooura/ooura.js"></script>
-    <script src="/oink_fft/js/setup.js"></script>
-    <script src="/oink_fft/js/benchmark.js"></script>
+    <script src="/oink_fft/js/indutny/fft.js" defer></script>
+    <script src="/oink_fft/js/dsp/dsp.js" defer></script>
+    <script src="/oink_fft/js/ooura/ooura.js" defer></script>
+    <script src="/oink_fft/js/setup.js" defer></script>
+    <script src="/oink_fft/js/benchmark.js" defer></script>
 </body>
 </html>
