--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -57,7 +57,7 @@
     <script src="/oink_fft/js/indutny/plugin.js" defer></script>
     <!--<script src="/oink_fft/js/dsp/dsp.js" defer></script>
     <script src="/oink_fft/js/ooura/ooura.js" defer></script>-->
-    <script src="/oink_fft/js/setup.js" defer></script>
+    <script type="module" src="/oink_fft/js/setup.js" defer></script>
     <script src="/oink_fft/js/main.js" defer></script>
     <script src="/oink_fft/js/benchmark.js" defer></script>
 </body>
