--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -52,10 +52,10 @@
             // Get the scroll position relative to the top of the page
             const scrollPosition = $(window).scrollTop();
             // Determine the opacity based on the scroll position
-            const totalHeight = $("#section_main").height(); // Get the total height of #section_main
-            const opacity = scrollPosition / totalHeight;
+            const totalHeight = $("#section_main").height();
+            const opacity = 1 - (scrollPosition / totalHeight);
             // Apply the opacity to the section background
-            $("#section_usage").css("background-color", `rgba(255, 255, 255, ${opacity})`);
+            $("#section_usage").css("background-color", `rgba(100, 50, 50, ${opacity})`);
         }
 
         // Attach event listener to the scroll event
