--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -36,23 +36,15 @@
 
 	    <h3>1. Installation</h3>
 	    <p>To use this library, you first need to include it in your project.</p>
-	    <pre><code>
-	    	import * as OINK from 'oink_fft.js';
-	    </code></pre>
+	    <pre><code>import * as OINK from 'oink_fft.js';</code></pre>
 
 	    <h3>2. Initialization</h3>
 	    <p>Now, to make the FFT functions accessible, you need to call the WASM setup.</p>
-	    <pre><code>
-	    	  const Module_OINK   = import('fft_wasm.js');
-              initializeModuleOINK(Module_OINK.default());
-	    </code></pre>
+	    <pre><code>const Module_OINK = import('fft_wasm.js');\ninitializeModuleOINK(Module_OINK.default());</code></pre>
 
 	    <h3>3. Usage</h3>
 	    <p>Here's how you can use the Forward FFT of size 1024</p>
-	    <pre><code>
-	    	  let realInput = new Float32Array([/* Fill with 1024 Float Values */]);
-              let spectrum  = fftReal1024(realInput);
-	    </code></pre>
+	    <pre><code>let realInput = new Float32Array([/* Fill with 1024 Float Values */]);\nlet spectrum  = fftReal1024(realInput);</code></pre>
 
 	    <p>Provided FFTs for different sizes:</p>
 	    <pre><code>
