--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -39,7 +39,7 @@
 	    	<code>
 	    		<span>//To use this library, you first need to include it in your project.</span>
 	    		<span></span>
-	    		<span>import * as OINK from 'oink_fft.js';</span>
+	    		<span>import * as OINK from 'https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.3-alpha/oink_fft.js';</span>
 	    	</code>
 	    </pre>
 
@@ -49,7 +49,7 @@
 	    		<span>//Now, to make the FFT functions accessible, </span>
 	    	    <span>//you need to import the WASM file and call the WASM binding setup.</span>
 	    	    <span></span>
-	    		<span>const Module_OINK = import('fft_wasm.js');</span>
+	    		<span>const Module_OINK = import('https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.3-alpha/fft_wasm.js');</span>
 	    	    <span>OINK.initializeModuleOINK(Module_OINK.default());</span>
 	    	</code>
 	    </pre>
