--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -27,9 +27,9 @@
 </head>
 <body>
 	<div id="root">
-	   <script src="/sketchtune/js/fft_wasm.js"></script>
-	   <script src="/sketchtune/js/fft.js"></script>
-	   <script src="/sketchtune/js/stretcher.js"></script>
+	   <!--<script src="/sketchtune/js/fft_wasm.js"></script>
+	   <script src="/sketchtune/js/fft.js"></script>-->
+	   <script type="module" src="/sketchtune/js/stretcher.js"></script>
 	   <script src="/sketchtune/js/app.js"></script>
 	</div>
 </body>
