--- a/sketchtune/index.html
+++ b/sketchtune/index.html
@@ -29,8 +29,7 @@
 	<div id="root">
 	   <!--<script src="/sketchtune/js/fft_wasm.js"></script>
 	   <script src="/sketchtune/js/fft.js"></script>-->
-	   <script type="module" src="/sketchtune/js/stretcher.js"></script>
-	   <script src="/sketchtune/js/app.js"></script>
+	   <script type="module" src="/sketchtune/js/app.js"></script>
 	</div>
 </body>
 </html>
