--- a/oink_fft/index.html
+++ b/oink_fft/index.html
@@ -1,12 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-<!---
-<meta http-equiv='cache-control' content='no-cache'> 
-<meta http-equiv='expires' content='0'> 
-<meta http-equiv='pragma' content='no-cache'>
---->
-
 	<meta charset="utf-8"/>
 	<link rel="icon" type="image/png" href="/oink_fft/favicon/favicon-96x96.png"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -20,7 +14,7 @@
 	</script>
 	<link href="/oink_fft/css/theme.css" rel="stylesheet">
 
-	<script src=" https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
 </head>
 <body>
 	<section id="section_main">
@@ -34,27 +28,16 @@
 	<section id="section_usage">
         <h2>How To Use OINK FFT</h2>
 
-	    <h3>1. Installation</h3>
+	    <h3>1. Easy Import</h3>
 	    <pre>
 	    	<code>
 	    		<span>//To use this library, you first need to include it in your project.</span>
 	    		<span></span>
-	    		<span>import * as OINK from 'https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.3-alpha/oink_fft.js';</span>
+	    		<span>import * as OINK from 'https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.5-alpha/oink_fft.js';</span>
 	    	</code>
 	    </pre>
 
-	    <h3>2. Setup</h3>
-	    <pre>
-	    	<code>
-	    		<span>//Now, to make the FFT functions accessible, </span>
-	    	    <span>//you need to import the WASM file and call the WASM binding setup.</span>
-	    	    <span></span>
-	    		<span>const Module_OINK = import('https://cdn.jsdelivr.net/gh/sch1z0net/oink@v0.1.3-alpha/fft_wasm.js');</span>
-	    	    <span>OINK.initializeModuleOINK(Module_OINK.default());</span>
-	    	</code>
-	    </pre>
-
-	    <h3>3. Usage Example</h3>
+	    <h3>2. Usage Example</h3>
 	    <pre>
 	    	<code>
 	            <span>//Here's how you can use the Forward FFT of size 1024</span>
@@ -65,7 +48,7 @@
 	    	</code>
 	    </pre>
 
-	    <h3>4. Use different available FFT sizes</h3>
+	    <h3>3. Use different available FFT sizes</h3>
 	    <pre>
 	    	<code>
 	    		<span>// 128 input -> 256 spectrum</span>
